# exoskeleton

./: README.md
2DOF_Folder/: exo_force_control.cpp  exo_force_control.h  main_exo_control.cpp
ESP32/: ESP32.ino
bagfiles/: traj5.bag  trajTest1.bag  trajvar.bag
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/tutorial_2/: SetBool.h  SetBoolRequest.h  SetBoolResponse.h
devel/lib/exo_control/: exo_control  keyboard_node
devel/lib/pkgconfig/: exo_control.pc  skin_control.pc  tutorial_2.pc
devel/lib/python3/dist-packages/tutorial_2/srv/: _SetBool.py
devel/lib/skin_control/: skin_control
devel/lib/tutorial_2/: listener  set_bool_client  set_bool_server  talker  talker.py
devel/share/common-lisp/ros/tutorial_2/srv/: SetBool.lisp  _package.lisp  _package_SetBool.lisp  tutorial_2-srv.asd
devel/share/exo_control/cmake/: exo_control-msg-extras.cmake  exo_control-msg-paths.cmake  exo_controlConfig.cmake
devel/share/gennodejs/ros/tutorial_2/srv/: SetBool.js
devel/share/roseus/ros/exo_control/: manifest.l
devel/share/roseus/ros/tutorial_2/: manifest.l
devel/share/roseus/ros/tutorial_2/srv/: SetBool.l
devel/share/skin_control/cmake/: skin_controlConfig.cmake
devel/share/tutorial_2/cmake/: tutorial_2-msg-paths.cmake  tutorial_2Config.cmake
project2_template/template/: init_master_ROS  init_slave_ROS
project2_template/template/bagfiles/: test-11.bag  traj2.bag
src/exo_control/: CMakeLists.txt
src/exo_control/include/exo_control/: exo_force_control.h  exo_pos_control.h  exo_pos_control_respald.h
src/exo_control/launch/: exo_control.launch
src/exo_control/launch/configs/: control_params.yaml
src/exo_control/src/: exo_force_control.cpp  exo_pos_control.cpp  exo_pos_control_2DOF.cpp  exo_pos_control_respald.cpp  keyboard_node.cpp
src/exo_control/src/Applications/: main_exo_control.cpp  main_exo_control_extended.cpp
src/skin_control/: CMakeLists.txt  package.xml
src/skin_control/launch/: skin_control.launch
src/skin_control/launch/config/: patch1.xml  patch1_2.xml  patch2.xml  patch2_2.xml  patch3L.xml  patch3R.xml  patch3_2.xml  patch4L.xml  patch_list.yaml
src/skin_control/src/Applications/: main_skin_control.cpp
src/tutorial_2/: CMakeLists.txt
src/tutorial_2/src/: listener.cpp  set_bool_client.cpp  set_bool_server.cpp  talker.cpp
